--- a/src/templates/deposito.html
+++ b/src/templates/deposito.html
@@ -65,7 +65,7 @@
                     <input type="text" name="deposito" placeholder="00.00" pattern="[0-9]{1, 10}.[0-9]{2}" title="Separe os centavos dos reais com '.' e utilize apenas 2 casas decimais" autocomplete="off">
                 
                     <input type="submit" value="Depositar" id="depositar">
-                    <a href="/home" class="voltar"><button>Voltar</button></a>
+                    <button><a href="/home">Voltar</a></button>
                 </form>
                 </span>
             </div>
