--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -125,6 +125,8 @@
             </div>
         </div>
         <a href="/enviaReqEncerramento"><input type="button" value="EXCLUIR CONTA" id="deletar"></a>
-        <a href="/home"><input type="button" value="Voltar"></a>
+        <div class="cent">
+        <a href="/home" class="voltar"><button> Voltar </button></a>
+        </div>
     </body>
 </html>
