correção de erro nos botões da pagina homegerente

--- a/src/templates/homegerente.html
+++ b/src/templates/homegerente.html
@@ -11,10 +11,10 @@
     <span>
       {% extends "home.html" %} {% block gerente %}
       <div class="req">
-        <button id="req"><a href="/requisicoes/confirmacao_deposito" id="req">Requisições de depósito</a></button>
-        <button id="req"><a href="/requisicoes/alteracao_cadastral" id="req">Requisições alterações cadastrais</a></button>
-        <br><button id="req"><a href="/requisicoes/encerramento_conta" id="req">Requisições de encerramento de conta</a></button>
-        <button id="req"><a href="/requisicoes/confirmacao_cadastro" id="req">Requisições de abertura de conta</a></button>
+        <button id="req"><a href="/requisicoes/confirmacao_deposito" class="nav-link">Requisições de depósito</a></button>
+        <button id="req"><a href="/requisicoes/alteracao_cadastral" class="nav-link">Requisições alterações cadastrais</a></button>
+        <button id="req"><a href="/requisicoes/encerramento_conta" class="nav-link">Requisições de encerramento de conta</a></button>
+        <button id="req"><a href="/requisicoes/confirmacao_cadastro" class="nav-link">Requisições de abertura de conta</a></button>
     </div>
     {% endblock %}
     </span>
