--- a/src/templates/homegerente.html
+++ b/src/templates/homegerente.html
@@ -10,7 +10,7 @@
   <body>
     <span>
       {% extends "home.html" %} {% block gerente %}
-      <div class="req">
+      <div class="centHomeG">
         <button id="req"><a href="/requisicoes/confirmacao_deposito" class="nav-link">Requisições de depósito</a></button>
         <button id="req"><a href="/requisicoes/alteracao_cadastral" class="nav-link">Requisições alterações cadastrais</a></button>
         <button id="req"><a href="/requisicoes/encerramento_conta" class="nav-link">Requisições de encerramento de conta</a></button>
