--- a/src/templates/deposito.html
+++ b/src/templates/deposito.html
@@ -31,23 +31,30 @@
                     document.getElementById("mySidenav").style.width = "0";
                     }
                 </script>
-            <div class="menu">
-                <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
+            <div class="topo">
+                <header class="navbar">
+                    <div class="menu">
+                        <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
+                    </div>
+                    <div id="mySidenav" class="sidenav">
+                        <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
+                        <a href="/home">Home</a>
+                        <a href="/saque">Saque</a>
+                        <a href="/deposito">Deposito</a>
+                        <a href="/extrato">Extrato</a>        
+                        <a href="/mudancaCadastral">Perfil de usuário</a>
+                        <a href="/loggout">Sair</a>
+                        <br>
+                    </div>
+                    <a href="/home">
+                        <img src="../static/public/logo.png" alt="logo">
+                    </a>
+                    <div class="user">
+                        <a href="/mudancaCadastral">
+                        <img src="../static/public/user.png" alt="user" style="width:50px;height:50px;"></a>
+                    </div>
+                </header>
             </div>
-            <div id="mySidenav" class="sidenav">
-                <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
-                <a href="/home">Home</a>
-                <a href="/loggout">Sair</a>
-            </div>
-            <a href="/home">
-                <img src="../static/public/logo.png" alt="logo">
-            </a>
-            <div class="user">
-                <a href="/user">
-                <img src="../static/public/user.png" alt="user" style="width:50px;height:50px;"></a>
-            </div>
-            </div>
-    </header>
     </head>
     <body>
         </header>
