--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -17,26 +17,30 @@
     </script>
 </head>
 <body>
-    <header class="navbar">
-        <div class="menu">
-            <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
-        </div>
-        <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
-            <a href="/home">Home</a>
-            <a href="/saque">Saque</a>
-            <a href="/deposito">Deposito</a>
-            <a href="/loggout">Sair</a>
-        </div>
-        <a href="/home">
-            <img src="../static/public/logo.png" alt="logo">
-        </a>
-        <div class="user">
-            <a href="/mudancaCadastral">
-            <img src="../static/public/user.png" alt="user" style="width:50px;height:50px;"></a>
-        </div>
-    </header>
-    <hr>
+    <div class="topo">
+        <header class="navbar">
+            <div class="menu">
+                <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
+            </div>
+            <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
+                <a href="/home">Home</a>
+                <a href="/saque">Saque</a>
+                <a href="/deposito">Deposito</a>
+                <a href="/extrato">Extrato</a>        
+                <a href="/mudancaCadastral">Perfil de usuário</a>
+                <a href="/loggout">Sair</a>
+                <br>
+            </div>
+            <a href="/home">
+                <img src="../static/public/logo.png" alt="logo">
+            </a>
+            <div class="user">
+                <a href="/mudancaCadastral">
+                <img src="../static/public/user.png" alt="user" style="width:50px;height:50px;"></a>
+            </div>
+        </header>
+    </div>
         <div class="divtabuser">
             <div class="dirowuser">
                 <div class="userinfo">
@@ -125,8 +129,6 @@
             </div>
         </div>
         <a href="/enviaReqEncerramento"><input type="button" value="EXCLUIR CONTA" id="deletar"></a>
-        <div class="cent">
         <a href="/home" class="voltar"><button> Voltar </button></a>
-        </div>
     </body>
 </html>
