Criação de rota separada para gerente de agencia

--- a/src/templates/requisicoes.html
+++ b/src/templates/requisicoes.html
@@ -247,5 +247,5 @@
 {% endif %}
 
 <div class="cent">
-    <a href="/home" class="voltar"><button> Voltar </button></a>
+    <a href="/homeGerenteAgencia" class="voltar"><button> Voltar </button></a>
     </div>
