--- a/src/templates/usuarios_agencia.html
+++ b/src/templates/usuarios_agencia.html
@@ -115,7 +115,7 @@
         </div>
     </div>
     <div class="cent">
-        <a href="/home" class="voltar"><button> Voltar </button></a>
+        <a href="/homeGerenteAgencia" class="voltar"><button> Voltar </button></a>
     </div>       
 </body>
 </html>
