--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -131,6 +131,8 @@
         <a href="/enviaReqEncerramento"><input type="button" value="EXCLUIR CONTA" id="deletar"></a>
         {% if gerente == 'agencia' %}
             <a href="/homeGerenteAgencia" class="voltar"><button> Voltar </button></a>
+        {% elif gerente == 'geral' %}
+            <a href="/homeGerenteGeral" class="voltar"><button> Voltar </button></a>
         {% else %}
             <a href="/home" class="voltar"><button> Voltar </button></a>
         {% endif %}
