--- a/src/templates/usuarios_agencia.html
+++ b/src/templates/usuarios_agencia.html
@@ -115,7 +115,11 @@
         </div>
     </div>
     <div class="cent">
-        <a href="/homeGerenteAgencia" class="voltar"><button> Voltar </button></a>
+        {% if gerente == 'agencia' %}
+            <a href="/homeGerenteAgencia" class="voltar"><button> Voltar </button></a>
+        {% else %}
+            <a href="/homeGerenteGeral" class="voltar"><button> Voltar </button></a>
+        {% endif %}
     </div>       
 </body>
 </html>
