--- a/src/templates/saque.html
+++ b/src/templates/saque.html
@@ -56,7 +56,14 @@
                     <input type="text" name="saque" placeholder="00.00" pattern="[0-9]{1, 10}.[0-9]{2}" title="Separe os centavos dos reais com '.' e utilize apenas 2 casas decimais" autocomplete="off">
                 
                     <input type="submit" value="Sacar" id="sacar">
-                    <button><a href="/home">Voltar</a></button>
+                    {% if gerente == 'agencia' %}
+                        <button><a href="/homeGerenteAgencia">Voltar</a></button>
+                    {% elif gerente == 'geral' %}
+                        <button><a href="/homeGerenteGeral">Voltar</a></button>
+                    {% else %}
+                        <button><a href="/home">Voltar</a></button>
+                    {% endif %}
+                    
                 </form>
                 </span>
             </div>
