--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -18,18 +18,20 @@
     <title>Acesse sua conta</title>
 </head>
 <body>
-    <header class="navbar">
-        <div class="menu">
-            <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
-        </div>
-        <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
-            <a href="/cadastro">Cadastro</a>
-        </div>
-        <a href="/">
-            <img src="../static/public/logo.png" alt="logo">
-        </a>
-        </div>
+    <div class="topo">
+        <header class="navbar">
+            <div class="menu">
+                <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
+            </div>
+            <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
+                <a href="/cadastro">Cadastro</a>
+            </div>
+            <a href="/">
+                <img src="../static/public/logo.png" alt="logo">
+            </a>
+            </div>
+    </div>
     <!-- Menssagem de erro de login (só aparece se as informações estiverem erradas) -->
     
 
