--- a/src/templates/requisicoes.html
+++ b/src/templates/requisicoes.html
@@ -21,31 +21,33 @@
                 if(v.length == 11) i.value += "-";
             }
             </script>
-                <script>
-                    // pra abrir o menu
-                    function abre() {
-                    document.getElementById("mySidenav").style.width = "250px";
-                    }
-                    // pra fechar o menu
-                    function fecha() {
-                    document.getElementById("mySidenav").style.width = "0";
-                    }
-                </script>
-            <div class="menu">
-                <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
-            </div>
-            <div id="mySidenav" class="sidenav">
-                <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
-                <a href="/home">Home</a>
-                <a href="/loggout">Sair</a>
-            </div>
-            <a href="/home">
-                <img src="../static/public/logo.png" alt="logo">
-            </a>
-            <div class="user">
-                <a href="/user">
-                <img src="../static/public/user.png" alt="user" style="width:50px;height:50px;"></a>
-            </div>
+            <script>
+                // pra abrir o menu
+                function abre() {
+                document.getElementById("mySidenav").style.width = "250px";
+                }
+                // pra fechar o menu
+                function fecha() {
+                document.getElementById("mySidenav").style.width = "0";
+                }
+            </script>
+            <div class="topo">
+                <div class="menu">
+                    <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
+                </div>
+                <div id="mySidenav" class="sidenav">
+                    <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
+                    <a href="/home">Home</a>
+                    <a href="/loggout">Sair</a>
+                </div>
+                <a href="/home">
+                    <img src="../static/public/logo.png" alt="logo">
+                </a>
+                <div class="user">
+                    <a href="/user">
+                    <img src="../static/public/user.png" alt="user" style="width:50px;height:50px;"></a>
+                </div>
+                </div>
             </div>
     </header>
 </head>
