--- a/src/templates/usuarios_agencia.html
+++ b/src/templates/usuarios_agencia.html
@@ -32,26 +32,27 @@
             document.getElementById("mySidenav").style.width = "0";
             }
         </script>
-    <div class="menu">
-        <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
-    </div>
-    <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
-        <a href="/home">Home</a>
-        <a href="/loggout">Sair</a>
-    </div>
-    <a href="/home">
-        <img src="../static/public/logo.png" alt="logo">
-    </a>
-    <div class="user">
-        <a href="/user">
-        <img src="../static/public/user.png" alt="user" style="width:50px;height:50px;"></a>
-    </div>
-    </div>
-</header>
-<body>
-    <div class="row">
-        <div class="coluna">
+    <body>
+        <div class="topo">
+            <div class="menu">
+                <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
+            </div>
+            <div id="mySidenav" class="sidenav">
+                <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
+                <a href="/home">Home</a>
+                <a href="/loggout">Sair</a>
+            </div>
+            <a href="/home">
+                <img src="../static/public/logo.png" alt="logo">
+            </a>
+            <div class="user">
+                <a href="/user">
+                <img src="../static/public/user.png" alt="user" style="width:50px;height:50px;"></a>
+            </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="coluna">
             
             {% for linhaUsuario in usuario %}
                 {% for linhaConta in conta %}
