--- a/src/templates/cadastro.html
+++ b/src/templates/cadastro.html
@@ -31,8 +31,7 @@
                 }
             </script>
     </head>
-    <body>
-        <div class="topo">
+    <body class="body2">
             <header class="navbar">
                 <div class="menu">
                     <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
@@ -46,7 +45,6 @@
                 </a>
                 </div>
             </header>
-        </div>
             <form action="#" method="post" class="cadastro-form">
                 <h1>Cadastro</h1>
                 {% with mensagens = get_flashed_messages() %}
