--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -17,8 +17,7 @@
     </script>
     <title>Acesse sua conta</title>
 </head>
-<body>
-    <div class="topo">
+<body class="body2">
         <header class="navbar">
             <div class="menu">
                 <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
@@ -31,7 +30,6 @@
                 <img src="../static/public/logo.png" alt="logo">
             </a>
             </div>
-    </div>
     <!-- Menssagem de erro de login (só aparece se as informações estiverem erradas) -->
     
 
